--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
     >
         <h2>Part 1: Respondents’ Characteristics</h2>
 
-        <div class="question">
-            <label>Your email:</label><br>
-            <input type="email" name="email" required>
-        </div>
 
         <div class="question">
             <label>1) Gender:</label><br>
@@ -54,7 +50,7 @@
         <p>Please indicate your level of agreement to the following statements on a scale of 1 to 5.</p>
         <p>1 - Strongly Disagree | 2 - Disagree | 3 - Neutral | 4 - Agree | 5 - Strongly Agree</p>
 
-        <!-- Example Emotional Awareness Question -->
+        <!-- Emotional Awareness Question -->
         <div class="question">
             <label>EA1: I am aware of the personal feelings when meeting someone.</label>
             <div class="scale">
@@ -65,14 +61,181 @@
                 <label><input type="radio" name="EA1" value="5" required> 5</label>
             </div>
         </div>
-
-        <!-- Repeat for additional questions, like EA2, EA3, etc. -->
-
-        <!-- Free-form message box (optional) -->
-        <div class="question">
-            <label>Your message:</label><br>
-            <textarea name="message" rows="5"></textarea>
+        <div class="question"></div>
+            <label>EA2: I know the content/implicit that I want to convey to other members when working in a team.</label>
+            <div class="scale">
+                <label><input type="radio" name="EA2" value="1" required> 1</label>
+                <label><input type="radio" name="EA2" value="2" required> 2</label>
+                <label><input type="radio" name="EA2" value="3" required> 3</label>
+                <label><input type="radio" name="EA2" value="4" required> 4</label>
+                <label><input type="radio" name="EA2" value="5" required> 5</label>
+            </div>
         </div>
+        <div class="question">
+            <label>EA3: I can feel and capture the emotions of other team members when talking or working with me.</label>
+            <div class="scale">
+                <label><input type="radio" name="EA3" value="1" required> 1</label>
+                <label><input type="radio" name="EA3" value="2" required> 2</label>
+                <label><input type="radio" name="EA3" value="3" required> 3</label>
+                <label><input type="radio" name="EA3" value="4" required> 4</label>
+                <label><input type="radio" name="EA3" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>EA4: When my emotions at work change, I know clearly why I have that change.</label>
+            <div class="scale">
+                <label><input type="radio" name="EA4" value="1" required> 1</label>
+                <label><input type="radio" name="EA4" value="2" required> 2</label>
+                <label><input type="radio" name="EA4" value="3" required> 3</label>
+                <label><input type="radio" name="EA4" value="4" required> 4</label>
+                <label><input type="radio" name="EA4" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>EA5: I feel the evaluation through the hidden meanings of the group members to me through their actions and gestures.</label>
+            <div class="scale">
+                <label><input type="radio" name="EA5" value="1" required> 1</label>
+                <label><input type="radio" name="EA5" value="2" required> 2</label>
+                <label><input type="radio" name="EA5" value="3" required> 3</label>
+                <label><input type="radio" name="EA5" value="4" required> 4</label>
+                <label><input type="radio" name="EA5" value="5" required> 5</label>
+            </div>
+        </div>
+
+        <!-- Emotional Usage (EU) Questions -->
+        <div class="question">
+            <label>EU1: I always evaluate the importance of work and events to myself.</label>
+            <div class="scale">
+                <label><input type="radio" name="EU1" value="1" required> 1</label>
+                <label><input type="radio" name="EU1" value="2" required> 2</label>
+                <label><input type="radio" name="EU1" value="3" required> 3</label>
+                <label><input type="radio" name="EU1" value="4" required> 4</label>
+                <label><input type="radio" name="EU1" value="5" required> 5</label>
+            </div>
+        </div>
+
+        <div class="question">
+            <label>EU2: My ability to come up with new ideas is affected by my mood.</label>
+            <div class="scale">
+                <label><input type="radio" name="EU1" value="1" required> 1</label>
+                <label><input type="radio" name="EU1" value="2" required> 2</label>
+                <label><input type="radio" name="EU1" value="3" required> 3</label>
+                <label><input type="radio" name="EU1" value="4" required> 4</label>
+                <label><input type="radio" name="EU1" value="5" required> 5</label>
+            </div>
+        </div>
+
+        <div class="question">
+            <label>EU3: My problem-solving ability/level is affected by mood.</label>
+            <div class="scale">
+                <label><input type="radio" name="EU1" value="1" required> 1</label>
+                <label><input type="radio" name="EU1" value="2" required> 2</label>
+                <label><input type="radio" name="EU1" value="3" required> 3</label>
+                <label><input type="radio" name="EU1" value="4" required> 4</label>
+                <label><input type="radio" name="EU1" value="5" required> 5</label>
+            </div>
+        </div>
+
+        <div class="question">
+            <label>EU4: My responsibilities and enthusiasm for work are influenced by mood.</label>
+            <div class="scale">
+                <label><input type="radio" name="EU1" value="1" required> 1</label>
+                <label><input type="radio" name="EU1" value="2" required> 2</label>
+                <label><input type="radio" name="EU1" value="3" required> 3</label>
+                <label><input type="radio" name="EU1" value="4" required> 4</label>
+                <label><input type="radio" name="EU1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>EU5: Emotions are one of the most meaningful things in my life because I use them all the time.</label>
+            <div class="scale">
+                <label><input type="radio" name="EU1" value="1" required> 1</label>
+                <label><input type="radio" name="EU1" value="2" required> 2</label>
+                <label><input type="radio" name="EU1" value="3" required> 3</label>
+                <label><input type="radio" name="EU1" value="4" required> 4</label>
+                <label><input type="radio" name="EU1" value="5" required> 5</label>
+            </div>
+        </div>
+
+        <!-- Emotional Understanding (EUS) Questions -->
+        <div class="question">
+            <label>EUS1: I know when to share my own problems with others.</label>
+            <div class="scale">
+                <label><input type="radio" name="EUS1" value="1" required> 1</label>
+                <label><input type="radio" name="EUS1" value="2" required> 2</label>
+                <label><input type="radio" name="EUS1" value="3" required> 3</label>
+                <label><input type="radio" name="EUS1" value="4" required> 4</label>
+                <label><input type="radio" name="EUS1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>EUS1: I know when to share my own problems with others.</label>
+            <div class="scale">
+                <label><input type="radio" name="EUS1" value="1" required> 1</label>
+                <label><input type="radio" name="EUS1" value="2" required> 2</label>
+                <label><input type="radio" name="EUS1" value="3" required> 3</label>
+                <label><input type="radio" name="EUS1" value="4" required> 4</label>
+                <label><input type="radio" name="EUS1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>EUS1: I know when to share my own problems with others.</label>
+            <div class="scale">
+                <label><input type="radio" name="EUS1" value="1" required> 1</label>
+                <label><input type="radio" name="EUS1" value="2" required> 2</label>
+                <label><input type="radio" name="EUS1" value="3" required> 3</label>
+                <label><input type="radio" name="EUS1" value="4" required> 4</label>
+                <label><input type="radio" name="EUS1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>EUS1: I know when to share my own problems with others.</label>
+            <div class="scale">
+                <label><input type="radio" name="EUS1" value="1" required> 1</label>
+                <label><input type="radio" name="EUS1" value="2" required> 2</label>
+                <label><input type="radio" name="EUS1" value="3" required> 3</label>
+                <label><input type="radio" name="EUS1" value="4" required> 4</label>
+                <label><input type="radio" name="EUS1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>EUS1: I know when to share my own problems with others.</label>
+            <div class="scale">
+                <label><input type="radio" name="EUS1" value="1" required> 1</label>
+                <label><input type="radio" name="EUS1" value="2" required> 2</label>
+                <label><input type="radio" name="EUS1" value="3" required> 3</label>
+                <label><input type="radio" name="EUS1" value="4" required> 4</label>
+                <label><input type="radio" name="EUS1" value="5" required> 5</label>
+            </div>
+        </div>
+
+        <!-- Example: Emotional Controlling (EC) Questions -->
+        <div class="question">
+            <label>EC1: I know how to maintain positive emotions.</label>
+            <div class="scale">
+                <label><input type="radio" name="EC1" value="1" required> 1</label>
+                <label><input type="radio" name="EC1" value="2" required> 2</label>
+                <label><input type="radio" name="EC1" value="3" required> 3</label>
+                <label><input type="radio" name="EC1" value="4" required> 4</label>
+                <label><input type="radio" name="EC1" value="5" required> 5</label>
+            </div>
+        </div>
+        
+        <!-- Example: Teamwork Results (R) Questions -->
+        <div class="question">
+            <label>R1: My team worked together to complete the task in a timely manner.</label>
+            <div class="scale">
+                <label><input type="radio" name="R1" value="1" required> 1</label>
+                <label><input type="radio" name="R1" value="2" required> 2</label>
+                <label><input type="radio" name="R1" value="3" required> 3</label>
+                <label><input type="radio" name="R1" value="4" required> 4</label>
+                <label><input type="radio" name="R1" value="5" required> 5</label>
+            </div>
+        </div>
+
+
+
+
 
         <!-- your other form fields go here -->
 
