--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
         </div>
         <div class="question">
-            <label>EUS1: I know when to share my own problems with others.</label>
+            <label>EUS2: When communicating, I know how to arrange event content so that listeners feel comfortable.</label>
             <div class="scale">
                 <label><input type="radio" name="EUS1" value="1" required> 1</label>
                 <label><input type="radio" name="EUS1" value="2" required> 2</label>
@@ -179,7 +179,7 @@
             </div>
         </div>
         <div class="question">
-            <label>EUS1: I know when to share my own problems with others.</label>
+            <label>EUS3: When I need to express myself to someone, I always know how to make an impression on that person.</label>
             <div class="scale">
                 <label><input type="radio" name="EUS1" value="1" required> 1</label>
                 <label><input type="radio" name="EUS1" value="2" required> 2</label>
@@ -189,7 +189,7 @@
             </div>
         </div>
         <div class="question">
-            <label>EUS1: I know when to share my own problems with others.</label>
+            <label>EUS4: I empathize with the stories others share with me.</label>
             <div class="scale">
                 <label><input type="radio" name="EUS1" value="1" required> 1</label>
                 <label><input type="radio" name="EUS1" value="2" required> 2</label>
@@ -199,7 +199,7 @@
             </div>
         </div>
         <div class="question">
-            <label>EUS1: I know when to share my own problems with others.</label>
+            <label>EUS5: I always believe in myself to do a good job.</label>
             <div class="scale">
                 <label><input type="radio" name="EUS1" value="1" required> 1</label>
                 <label><input type="radio" name="EUS1" value="2" required> 2</label>
@@ -220,8 +220,29 @@
                 <label><input type="radio" name="EC1" value="5" required> 5</label>
             </div>
         </div>
-        
-        <!-- Example: Teamwork Results (R) Questions -->
+        <div class="question">
+            <label>EC2: I always create positive motivation when taking on a job.</label>
+            <div class="scale">
+                <label><input type="radio" name="EC1" value="1" required> 1</label>
+                <label><input type="radio" name="EC1" value="2" required> 2</label>
+                <label><input type="radio" name="EC1" value="3" required> 3</label>
+                <label><input type="radio" name="EC1" value="4" required> 4</label>
+                <label><input type="radio" name="EC1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>EC3: I always control my emotions in every situation.</label>
+            <div class="scale">
+                <label><input type="radio" name="EC1" value="1" required> 1</label>
+                <label><input type="radio" name="EC1" value="2" required> 2</label>
+                <label><input type="radio" name="EC1" value="3" required> 3</label>
+                <label><input type="radio" name="EC1" value="4" required> 4</label>
+                <label><input type="radio" name="EC1" value="5" required> 5</label>
+            </div>
+        </div>
+
+
+        <!-- Teamwork Results (R) Questions -->
         <div class="question">
             <label>R1: My team worked together to complete the task in a timely manner.</label>
             <div class="scale">
@@ -232,12 +253,57 @@
                 <label><input type="radio" name="R1" value="5" required> 5</label>
             </div>
         </div>
+        <div class="question">
+            <label>R2: My team acted with calm and control.</label>
+            <div class="scale">
+                <label><input type="radio" name="R1" value="1" required> 1</label>
+                <label><input type="radio" name="R1" value="2" required> 2</label>
+                <label><input type="radio" name="R1" value="3" required> 3</label>
+                <label><input type="radio" name="R1" value="4" required> 4</label>
+                <label><input type="radio" name="R1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>R3: My team is always actively supporting each other, with a spirit of confidence, optimism and determination. </label>
+            <div class="scale">
+                <label><input type="radio" name="R1" value="1" required> 1</label>
+                <label><input type="radio" name="R1" value="2" required> 2</label>
+                <label><input type="radio" name="R1" value="3" required> 3</label>
+                <label><input type="radio" name="R1" value="4" required> 4</label>
+                <label><input type="radio" name="R1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>R4: My team adapts to changing situations.</label>
+            <div class="scale">
+                <label><input type="radio" name="R1" value="1" required> 1</label>
+                <label><input type="radio" name="R1" value="2" required> 2</label>
+                <label><input type="radio" name="R1" value="3" required> 3</label>
+                <label><input type="radio" name="R1" value="4" required> 4</label>
+                <label><input type="radio" name="R1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>R5: My team has been monitoring and reassessing the situation. </label>
+            <div class="scale">
+                <label><input type="radio" name="R1" value="1" required> 1</label>
+                <label><input type="radio" name="R1" value="2" required> 2</label>
+                <label><input type="radio" name="R1" value="3" required> 3</label>
+                <label><input type="radio" name="R1" value="4" required> 4</label>
+                <label><input type="radio" name="R1" value="5" required> 5</label>
+            </div>
+        </div>
+        <div class="question">
+            <label>R6: My team anticipates possible scenarios. </label>
+            <div class="scale">
+                <label><input type="radio" name="R1" value="1" required> 1</label>
+                <label><input type="radio" name="R1" value="2" required> 2</label>
+                <label><input type="radio" name="R1" value="3" required> 3</label>
+                <label><input type="radio" name="R1" value="4" required> 4</label>
+                <label><input type="radio" name="R1" value="5" required> 5</label>
+            </div>
+        </div>
 
-
-
-
-
-        <!-- your other form fields go here -->
 
         <button type="submit" class="submit">Submit Survey</button>
     </form>
